Avoid message-box overlap with timeline

--- a/cubedash/static/base.sass
+++ b/cubedash/static/base.sass
@@ -130,9 +130,9 @@ header
         color: $highlight_alt2
     
     > div
-        padding: 0 30px
-        margin: 15px 0
-        line-height: 2em
+        padding: 15px 30px
+        margin: 0
+        line-height: 1.75em
         flex: 1 1
         
         &::after
@@ -159,6 +159,7 @@ header
         text-decoration: none
         padding: 15px 30px
         color: #fcfcfc
+        font-weight: bold
 
     &:hover 
         background-color: $active_color
@@ -378,7 +379,7 @@ label
 .message-box
     position: absolute
     left: calc(50% - 100px)
-    top: 90px
+    top: 25%
     width: 200px
     text-align: center
     z-index: 9999
